--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "start": "node dist/server.js",
+    "build": "tsc --build",
+    "push": "git add . && git commit -m 'push fast' && git push"
   },
   "keywords": [],
   "author": "",
