--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "start": "node dist/server.js",
+    "start": "dist/server.js",
     "build": "tsc --build",
     "push": "git add . && git commit -m 'push fast' && git push"
   },
