--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon server.ts",
     "build": "tsc --build",
-    "start": "dist/server.js",
+    "start": "node dist/server.js",
     "push": "npm run build && git add . && git commit -m 'push fast' && git push"
   },
   "keywords": [],
